examples/test/testpolicy14767.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14767
  namespace: namespace293
spec:
  podSelector:
    matchLabels:
      key23: value34
      key25: value2
      key3: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value24
          key39: value48
          key13: value48
      podSelector:
        matchLabels:
          key7: value27
          key9: value14
          key42: value42
